...
            modifier = Modifier
                .verticalScroll(rememberScrollState())
                .padding(20.dp),
            verticalArrangement = Arrangement.Center,
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            val username = remember { mutableStateOf(TextFieldValue()) }
            val mail = remember { mutableStateOf(TextFieldValue()) }
            val password = remember { mutableStateOf(TextFieldValue()) }
            val passwordCheck = remember { mutableStateOf(TextFieldValue()) }
            val pfpUri = remember { MutableStateFlow("") }

            Text(text = "Registration", color = Color.DarkGray, style = TextStyle(fontSize = 50.sp))

            Spacer(modifier = Modifier.height(relative(20.dp)))

            ProfileImage("", true, relative(100.dp)){uri->
                pfpUri.value = uri
            }
...
                        focusedTextColor = Color.DarkGray,
                        unfocusedTextColor = Color.DarkGray
                    ),
                    modifier = Modifier
                        .width(windowInfo.screenWidth.div(2))
                        .height(windowInfo.screenHeight.div(18))
                        .testTag("email"),
                    label = { Text(text = "Email") },
                    value = mail.value,
                    onValueChange = { mail.value = it },
                    keyboardOptions = KeyboardOptions(imeAction = ImeAction.Next),
                    singleLine = true,
                    shape = RoundedCornerShape(10.dp),
...
                        focusedTextColor = Color.DarkGray,
                        unfocusedTextColor = Color.DarkGray
                    ),
                    modifier = Modifier
                        .width(windowInfo.screenWidth.div(2))
                        .height(windowInfo.screenHeight.div(18))
                        .testTag("confirmPassword"),
                    label = { Text(text = "Confirm Password") },
                    value = passwordCheck.value,
                    visualTransformation = PasswordVisualTransformation(),
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password, imeAction = ImeAction.Done),
                    singleLine = true,
                    shape = RoundedCornerShape(10.dp),
...
                                && !authenticating.value,
                        shape = RoundedCornerShape(10.dp),
                        modifier = Modifier
                            .fillMaxWidth()
                            .height(50.dp)
                    ) {
                        Text(text = "Register", fontSize = 20.sp)
                    }
                }
            }else{
                Box(modifier = Modifier.padding(40.dp, 0.dp, 40.dp, 0.dp)) {
                    Button(
                        colors = ButtonDefaults.buttonColors(PrimaryColor),
...
